# UniMatch-V2

./: .gitignore  CLAUDE.md  fixmatch.py  main.py  paper_results.csv  pretrained  pyproject.toml  reproduce.md  supervised.py  unimatch_v2.py  visualize_results.py
configs/: ade20k.yaml  ade20k_base.yaml  cityscapes.yaml  cityscapes_base.yaml  coco.yaml  coco_base.yaml  pascal.yaml
dataset/: semi.py
docs/: codebase_overview.md
scripts/: download_pretrained.sh  slurm_sweep.sh  slurm_sweep_base.sh  slurm_train.sh  submit_seeded.sh  train.sh
scripts/preprocess/: preprocess_ade20k.py  preprocess_cityscapes.py  preprocess_coco.py  run_all.sh
