[project]
name = "unimatch-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easydict>=1.13",
    "einops>=0.8.2",
    "h5py>=3.16.0",
    "opencv-python>=4.13.0.92",
    "pyyaml>=5.4.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
